--- a/Project.ipynb
+++ b/Project.ipynb
@@ -15,13 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "731ccd2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "import cv2"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
